apps/chupa/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: chupa
  labels:
    app: chupa
spec:
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {duration: 20s} #{} pause indefinitely
      - setWeight: 20
      - pause: {duration: 20s}
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
      canaryService: chupa-canary
      stableService: chupa-stable
      trafficRouting:
        istio:
           virtualService:
            name: chupa-vsvc
            routes:
            - primary
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: chupa
      version: 0.0.1
  template:
    metadata:
      labels:
        app: chupa
        version: 0.0.1
    spec:
      containers:
      - name: chupa
        image: diegoluisi/chupa:0.0.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "140m"
        livenessProbe:
          httpGet:
            path: /health-check/liveness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health-check/readiness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
