apps/chupa/base/-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: -vs
  namespace: 
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - diego.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: -svc
      weight: 100
