apps/chupa/base/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: chupa
    backstage.io/kubernetes-id: chupa
  name: chupa
spec:
  finalizers:
  - kubernetes

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chupa.diegoluisi.eti.br
  labels:
    app: chupa
    backstage.io/kubernetes-id: chupa
  name: chupa
  namespace: chupa
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: chupa
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chupa
    backstage.io/kubernetes-id: chupa
  name: chupa
  namespace: chupa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chupa
  template:
    metadata:
      labels:
        app: chupa
        backstage.io/kubernetes-id: chupa
    spec:
      containers:
      - image: diegoluisi/chupa:3c12d96f
        imagePullPolicy: IfNotPresent
        name: chupa
        ports:
        - name: app-port
          containerPort: 8080
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /health-check/liveness
        #     port: app-port
        #   failureThreshold: 2
        #   periodSeconds: 10  
        # startupProbe:
        #   httpGet:
        #     path: /health-check/readines
        #     port: app-port
        #   failureThreshold: 30
        #   periodSeconds: 10  
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chupa
  namespace: chupa
  labels:
    backstage.io/kubernetes-id: chupa
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - chupa.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chupa
        port:
          number: 8080
