apps/chupa/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chupa-vsvc
  namespace: chupa
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - chupa.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: chupa-stable
      weight: 100
    - destination:
        host: chupa-canary
      weight: 0
